# CGSoftRenderer

./: CMakeLists.txt  Main.cpp  README.md  cameraTest.cpp  mathTest.cpp  modelImportTest.cpp  textrueTest.cpp
Functions/: AddFun.cpp  AddFun.h  CMakeLists.txt
GPU/: CMakeLists.txt  VAO.cpp  VAO.h  bufferObject.cpp  bufferObject.h  clipper.cpp  clipper.h  dataStruct.h  frameBuffer.cpp  frameBuffer.h  gpu.cpp  gpu.h  raster.cpp  raster.h  texture.cpp  texture.h
GPU/Shader/: DefaultShader.cpp  DefaultShader.h  LightShader.cpp  LightShader.h  ShaderBase.cpp  ShaderBase.h  TextureShader.cpp  TextureShader.h
application/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  image.cpp  image.h  light.h  model.cpp  model.h
assets/modelsData/testBox/: testBox2.FBX
global/: base.cpp  base.h
math/: CMakeLists.txt  math.h  mathFunctions.h  matrix.h  zvector.h
